Fix bug where footer covers bottom of page

--- a/WebContent/stylesheets/sharedMain.css
+++ b/WebContent/stylesheets/sharedMain.css
@@ -109,6 +109,9 @@ body {
 }
 #sharedheaderlink4 { display: inline-block; }
 
+.sharedFooterBuffer {
+	margin-bottom: 50px;
+}
 
 .sharedFooter {
 	font-size: 14px;
@@ -116,6 +119,8 @@ body {
 	color: #CCCCCC;
 	text-align: center;
 	width: 100%;
+	
+	margin-top: 40px;
 	
 	bottom:0;
     position:fixed;
